Rework RangeSet to use ArrayList instead of arrays